test_suite/tests/ui/conflict/flatten-skip-serializing.stderr
error: #[serde(flatten] can not be combined with #[serde(skip_serializing)]
  --> $DIR/flatten-skip-serializing.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

